# aimarket-mcp

./: .coverage  CONTRIBUTORS.md  Dockerfile  Dockerfile.glama  Dockerfile.http  README.md  SECURITY.md  coverage.json  docker-compose.yml  glama.json  mcp_stdio_server.py  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  publish-pypi.yml
aimarket_mcp/: __init__.py  security.py  server.py  tools.py
docs/: GLAMA.md
scripts/: glama_install.sh
tests/: test_gateway.py  test_stdio.py
