[project]
name = "aimarket-mcp"
version = "0.1.0"
description = "alexar76 ecosystem MCP gateway — web fetch/search, Metis verify (SSRF-hardened)"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.37",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.scripts]
aimarket-mcp = "aimarket_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aimarket_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
