[project]
name = "aimarket-mcp"
version = "0.1.4"
description = "alexar76 ecosystem MCP gateway — SSRF-hardened web fetch/search + Metis verify (stdio + HTTP)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "alexar76", email = "publish@alexar76.dev" }]
keywords = ["mcp", "aimarket", "web-fetch", "web-search", "metis", "stdio"]
dependencies = [
    "mcp>=1.6,<4",
    "httpx>=0.27",
    "pydantic>=2",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://glama.ai/mcp/servers/alexar76/aimarket-mcp"
Repository = "https://github.com/alexar76/aimarket-mcp"
Documentation = "https://github.com/alexar76/aimarket-mcp#readme"
Issues = "https://github.com/alexar76/aimarket-mcp/issues"

[project.scripts]
# Glama runs: mcp-proxy -- aimarket-mcp  → must be stdio (FastMCP), not HTTP.
aimarket-mcp = "mcp_stdio_server:main"
aimarket-mcp-http = "aimarket_mcp.server:main"
aimarket-mcp-stdio = "mcp_stdio_server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aimarket_mcp"]
py-modules = ["mcp_stdio_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
